@@ -18,7 +18,7 @@ INSTANCE PC_Schmelze_Rohstahl (C_INFO)
 	information	= PC_Schmelze_Rohstahl_Info;
 	permanent	= 1;
 	important	= 0;
-	description	= "Rohstahl erhitzen";
+	description	= "Ein Rohstahl erhitzen";
 };
 
 FUNC INT PC_Schmelze_Rohstahl_Condition()
@@ -31,6 +31,35 @@ FUNC INT PC_Schmelze_Rohstahl_Condition()
 };
 
 FUNC VOID PC_Schmelze_Rohstahl_Info()
+{
+	CreateInvItems	(hero, ItMiSwordRawHot, 1);
+	
+	Print ("Rohstahl erhitzt");
+
+	Npc_RemoveInvItems	(hero, ItMiSwordRaw, 1);
+};
+
+INSTANCE PC_Schmelze_Rohstahl_Alle (C_INFO)
+{
+	npc		= PC_Hero;
+	nr		= 1;
+	condition	= PC_Schmelze_Rohstahl_Alle_Condition;
+	information	= PC_Schmelze_Rohstahl_Alle_Info;
+	permanent	= 1;
+	important	= 0;
+	description	= "Alle Rohstahl erhitzen";
+};
+
+FUNC INT PC_Schmelze_Rohstahl_Alle_Condition()
+{
+	if (PLAYER_MOBSI_PRODUCTION	==	MOBSI_Schmelze)
+	&& (Npc_HasItems(hero, ItMiSwordRaw) > 0)
+	{
+		return 1;
+	};
+};
+
+FUNC VOID PC_Schmelze_Rohstahl_Alle_Info()
 {
 	CreateInvItems	(hero, ItMiSwordRawHot, Npc_HasItems(hero, ItMiSwordRaw)+1);
 	
